Bug 155748 - "Can't use a global variable named 'parent'" r=bzbarsky sr=jst